@@ -13,6 +13,7 @@
         <module>hw02-myArrayList</module>
         <module>hw09-annotations</module>
         <module>hw15-myGsonWriter</module>
+        <module>hw17-jdbc</module>
     </modules>
 
     <developers>
@@ -42,6 +43,12 @@
         <junit-jupiter-engine.version>5.5.2</junit-jupiter-engine.version>
         <org.apache.maven.plugins.maven-assembly-plugin.version>3.2.0</org.apache.maven.plugins.maven-assembly-plugin.version>
         <com.google.code.gson.version>2.8.6</com.google.code.gson.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <h2.version>1.4.197</h2.version>
+        <logback-classic.version>1.2.3</logback-classic.version>
+        <slf4j-api.version>1.7.30</slf4j-api.version>
+        <javatuples.version>1.2</javatuples.version>
+
 
     </properties>
 
@@ -49,6 +56,16 @@
 
         <dependencies>
             <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+            <dependency>
+                <groupId>org.javatuples</groupId>
+                <artifactId>javatuples</artifactId>
+                <version>${javatuples.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
@@ -67,6 +84,17 @@
                 <artifactId>gson</artifactId>
                 <version>${com.google.code.gson.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback-classic.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
@@ -87,6 +115,17 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <argLine>--enable-preview</argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <compilerArgs>
+                            <arg>-parameters</arg>
+                            <arg>--enable-preview</arg>
+                            <!--<arg>-Xlint:preview</arg>-->
+                        </compilerArgs>
                     </configuration>
                 </plugin>
 
